fix: adjusted text alignment to left

--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
     color: dimgray;
     font-size: 20px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    text-align: center;
+    text-align: left;
 }
 
 h1 {
